# rag-eval-framework

./: .gitignore  LocalRAGEval.md  README.md  compare.py  config.example.yaml  config.py  generator.py  main.py  pyproject.toml  reviewer.py  runner.py
.github/workflows/: eval-regression.yml
dataset_builder/: generator.py  reviewer.py
datasets/: eval_dataset.json  raw_candidates.json  rejected.json
datasets/baselines/: latest_ragas.json
evaluators/: custom_evaluator.py  ragas_evaluator.py
judges/: llm_judge.py
reporters/: console.py  html_reporter.py
