[project]
name = "rag-eval-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "openai>=2.28.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
    "typer>=0.24.1",
]
